# VeryEssence

./: .gitignore  Dockerfile  NOTICE  README.md  app.py  cli.py  docker_run.sh  pyproject.toml  requirements.txt  run.sh
config/: ar_tokenizer_cfg.py  llamacpp_cfg.py  pdfreport_cfg.py  whisper_cfg.py
examples/: example_en_entities_en.txt  example_en_sentiment_en.txt  example_en_top_words.txt  example_en_topic summary_en.txt  example_en_transcribe_en.txt
modules/: file_processing.py  llm_analysis.py  report_builder.py  speaker_diarization.py  topic_modeling.py  whisper_transcription.py  word_counting.py
static/: style.css
templates/: disclaimer.html  features.html  index.html  license.html  result.html
